[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiopioneer"
dynamic = ["version"]
authors = [
  { name="Crowbar Z", email="crowbarz@outlook.com" },
]
description = "Asyncio Python library for controlling a Pioneer AVR via its API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]
classifiers = [
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/crowbarz/aiopioneer"
Issues = "https://github.com/crowbarz/aiopioneer/issues"

[project.scripts]
aiopioneer = "aiopioneer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["aiopioneer"]

[tool.hatch.version]
path = "aiopioneer/const.py"
